# ponderosa

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  PROTOTYPE.md  README.md
.claude/: mock-camera.js
memory/: MEMORY.md  feedback_playwright_testing.md  project_audit_app.md  project_client_frame_pipeline.md
services/: README.md
services/intake/: Makefile  README.md  main.py  pyproject.toml  run.sh
services/intake/root/etc/nginx/sites-available/: api.ponderosafireprotection.com
services/intake/root/etc/systemd/system/: ponderosa-intake.service
services/intake/templates/: magic_link.html
services/presenter/: Makefile  README.md  main.py  pyproject.toml  run.sh
services/presenter/root/etc/nginx/sites-available/: surveys.ponderosafireprotection.com
services/presenter/root/etc/systemd/system/: ponderosa-presenter.service
services/presenter/templates/: email.html  report.html
services/recommender/: Makefile  README.md  main.py  pyproject.toml  run.sh
services/recommender/context/: ACTIONS.md  SYSTEM.md
services/recommender/root/etc/systemd/system/: ponderosa-recommender.service
site/: Makefile  README.md  dev-cert.pem  dev-key.pem  serve.py  setup-mail.sh
site/root/etc/nginx/sites-available/: ponderosafireprotection.com
site/root/var/www/ponderosafireprotection.com/html/: app.html  home.html  index.html  styles.css
